# billy

./: .env.example  .gitignore  parse_laporan_keuangan.ipynb  pyproject.toml  start_restapi.py
bot/: config.py  messaging.py  placeholder.py  telegram_bot.py
src/api/basemodel/: user.py  utility.py
src/api/routes/: account.py  pay.py  user.py  utility.py  wallet.py
src/app/billy_web/: __init__.py  billy_web.py
src/base/: config.py  exception.py
src/utils/: database.py  messaging.py  utils.py
tests/: test_input_data.py
ulaporan/: APRIL.csv  FEB.csv  JAN.csv  JUNE.csv  MAR.csv  MAY.csv  parse_laporan_keuangan.ipynb
